[package]
name = "advent_of_code_2015"
version = "0.1.0"

[[bin]]
name="day05"
path="src/day05.rs"

[[bin]]
name="day04"
path="src/day04.rs"

[[bin]]
name="day03"
path="src/day03.rs"

[[bin]]
name="day02"
path="src/day02.rs"

[[bin]]
name="day01"
path="src/day01.rs"

[dependencies]
crypto = "0.5.1"
fancy-regex = "0.13.0"
md5 = "0.7.0"
