[package]
name = "advent_of_code_2015"
version = "0.1.0"

[[bin]]
name="day12"
path="src/day12.rs"

[[bin]]
name="day10"
path="src/day10.rs"

[[bin]]
name="day08"
path="src/day08.rs"

[[bin]]
name="day07"
path="src/day07.rs"

[[bin]]
name="day06"
path="src/day06.rs"

[[bin]]
name="day05"
path="src/day05.rs"

[[bin]]
name="day04"
path="src/day04.rs"

[[bin]]
name="day03"
path="src/day03.rs"

[[bin]]
name="day02"
path="src/day02.rs"

[[bin]]
name="day01"
path="src/day01.rs"

[dependencies]
crypto = "0.5.1"
fancy-regex = "0.13.0"
md5 = "0.7.0"
petgraph = "0.5.1"
regex = "1.11.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.133"